# nn_bgl

./: .gitignore  README.md
cmake/: nn_bglConfig.cmake.in
docs/: API.md
examples/: basic_usage.cpp
include/nn_bgl/: nn_bgl.h  training_data.h  training_data_human.h  training_data_mnist.h
src/: 2do.txt  CMakeLists.txt  Makefile  analyze_model.cpp  makeTrainingSamples.cpp  neural-net_bgl.cpp  nn_bgl.cpp  nn_bgl.h  run_test.sh  train_model.cpp  train_model_mnist.cpp  training_data.cpp  training_data.h  training_data_human.cpp  training_data_human.h  training_data_mnist.cpp  training_data_mnist.h
src/scripts/: parse_process_log.py  run_10_1000_simple.sh  run_1_10000.sh  run_5_2000_simple.sh  run_and_compare.sh
tests/: test_basic.cpp
